# iotics-ev-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO.md  entrypoint.sh  run.cloud_dev  run.foundation_dev  setup.cfg  setup.py
chart/evdemo/: Chart.yaml  values.yaml
chart/evdemo/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/: ai_algo.py  analytics.py  cleanup.py  cleanup_es.py  common.py  conf.py  describe.py  search.py  sparql.py  store.py  storeall.py  subscriber.py  testes.py  twin_manager.py
src/forecast_ai/: algo.py
src/js/: app.css  app.js  conf.js  index.html  iotics.js  make_delegations.py  stomp.js  test.html  ws.js
src/js/id/: id.js
src/model/: charging_station_twin.py  common.py  connection_twin.py  forecast_twin.py
src/openchargemap/: api.py  data_CA.json  data_FabC.json  data_GB.json
src/samples/: api_helper.py  identity_helper.py
