[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15

[metadata]
name = iotics-ev-demo
description = Iotics EV Demo
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = dev@iotics.com
url = https://github.com/Iotic-Labs/iotics-ev-demo
python_requires = >=3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    iotics-identity>=1.0.2
    requests~=2.26
    shortuuid~=1.0.8
    timeloop~=1.0.2
    ijson~=3.1.4
    retry~=0.9.2
    elasticsearch~=8.1.2
    elastic_transport~=8.1.2
    grpcio~=1.44.0
    grpcio-tools~=1.44.0
    grpcio-status~=1.44.0

[options.extras_require]
lint =
    flake8
    pylint
    pylint_quotes

[options.packages.find]
exclude =
    test*
